--- a/assessment.html
+++ b/assessment.html
@@ -3,20 +3,37 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta neme="twitter:card" content="summary>
-    <meta property="og:url" content="https://aka21-9.github.io/assessment/assessment.html">
-    <meta property="og:title" content="あなたのいいところ診断">
-    <meta property="og:description" content="ZEN Studyプログラミング入門コースで制作した、「あなたのいいところ診断」サイトです。">
     <title>あなたのいいところ診断</title>
-    <link rel="stylesheet" href="assessment.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
   </head>
   <body>
+    <!-- bgはbackgroundの略　-->
+    <nav class="navbar navbar-success-subtle bg-success-subtle">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">あなたのいいところ診断</a>
+      </div>
+    </nav>
+    <!-- containerはいい感じにしてくれる　pt-5はpaddingTop 5px開けるという意味 -->
+    <div class="container pt-5">
     <h1>あなたのいいところは？</h1>
     <p>診断したい名前を入れて下さい</p>
-    <input type="text" id="user-name" size="40" maxlength="20">
-    <button id="assessment">診断する</button>
-    <div id="result-area"></div>
-    <div id="tweet-area"></div>
+    <div class="row">
+      <div class="col-sm-9 col-lg-6">
+        <div class="input-group mb-3" style="max-width:450px">
+          <input type="text" class="form-control " id="user-name" size="40" maxlength="20" />
+          <button class="btn btn-outline-success" id="assessment">診断する</button>
+        </div>
+      </div>
+    </div>
+    
+
+    <div class="row">
+      <div class="col-lg-9">
+        <div id="result-area"></div>
+      </div>
+    </div>
+    <div id="tweet-area" class="mt-3"><s/div>
     <script src="assessment.js"></script>
+    </div>
   </body>
 </html>
